--- a/mockups/ironRat/products.html
+++ b/mockups/ironRat/products.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-primary bg-dark">
         <a class="navbar-brand" href="index.html">
-            <p class="h1 mt-3 mb-3"><img src="images/logo1.png" width="30" height="30" alt="logo"> IRON RAT CUSTOMS</p>
+            <p class="h3 mt-1 mb-6"><img src="images/IronRatsLogo.svg" width="100" height="70" alt="logo"> I R C</p>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="btn btn-primary">MENU</span>
@@ -39,25 +39,28 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="index.html">Home </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="index.html">Home </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3 active"><a href="products.html">Products</a></p>
+                    <p class="h6 mt-6 mb-3"><a href="reviews.html">Reviews </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="about-us.html">About us </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="products.html">Products</a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="contact-us.html">Contact us </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="about-us.html">About us </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="careers.html">Careers </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="contact-us.html">Contact us </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="appointment.html">Make an appointment </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="careers.html">Careers </a></p>
+                </li>
+                <li class="nav-item mr-4">
+                    <p class="h6 mt-6 mb-3"><a href="appointment.html">Make an appointment </a></p>
                 </li>
             </ul>
-            <p class="navbar-text mr-4 mt-3 mb-3 h2">
+            <p class="navbar-text mr-4 mt-6 mb-3 h6">
                 <a href="log-in.html">Log in </a>
             </p>
         </div>
@@ -67,7 +70,7 @@
     <div class="container">
 
 
-        <h1 class="display-1 bold">Our Products</h1>
+        <h2>Our Products</h2>
 
         <hr />
 
@@ -75,19 +78,19 @@
 
             <div class="col-md-6">
 
-                <h3 class="display-4 bold mt-3">Product 1</h3>
+                <h3>Product 1</h3>
 
                 <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
 
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">More pictures</button>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>More pictures</h6></button>
 
                 <div class="modal fade" id="myModal" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h4 class="modal-title">Product 1</h4>
+                                <h4 class="modal-title text-dark">Product 1</h4>
                             </div>
                             <div class="modal-body">
                                 <div id="demo" class="carousel slide" data-ride="carousel">
@@ -125,19 +128,19 @@
 
             <div class="col-md-6">
 
-                <h3 class="display-4 bold mt-3">Product 2</h3>
+                <h3>Product 2</h3>
 
                 <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
 
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">More pictures</button>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>More pictures</h6></button>
 
                 <div class="modal fade" id="myModal" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h4 class="modal-title">Product 2</h4>
+                                <h4 class="modal-title text-dark">Product 2</h4>
                             </div>
                             <div class="modal-body">
                                 <div id="demo" class="carousel slide" data-ride="carousel">
@@ -175,25 +178,25 @@
 
         </div>
 
-        <h2 class="display-3 bold mb-5 mt-5">Our Services</h2>
+        <h2 class="mb-5 mt-5">Our Services</h2>
 
         <div class="row">
 
             <div class="col-md-6">
 
-                <h3 class="display-4 bold mt-3">Service 1</h3>
+                <h3 class="mt-3">Service 1</h3>
 
                 <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
 
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">More pictures</button>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>More pictures</h6></button>
 
                 <div class="modal fade" id="myModal" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h4 class="modal-title">Service 1</h4>
+                                <h4 class="modal-title text-dark">Service 1</h4>
                             </div>
                             <div class="modal-body">
                                 <div id="demo" class="carousel slide" data-ride="carousel">
@@ -231,19 +234,19 @@
 
             <div class="col-md-6">
 
-                <h3 class="display-4 bold mt-3">Service 2</h3>
+                <h3 class="mt-3">Service 2</h3>
 
                 <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
 
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">More pictures</button>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>More pictures</h6></button>
 
                 <div class="modal fade" id="myModal" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h4 class="modal-title">Service 1</h4>
+                                <h4 class="modal-title text-dark">Service 1</h4>
                             </div>
                             <div class="modal-body">
                                 <div id="demo" class="carousel slide" data-ride="carousel">
@@ -281,25 +284,25 @@
 
         </div>
 
-        <h2 class="display-3 bold mb-5 mt-5">Our Solutions</h2>
+        <h2 class="mb-5 mt-5">Our Solutions</h2>
 
         <div class="row">
 
             <div class="col-md-6">
 
-                <h3 class="display-4 bold mt-3">Solution 1</h3>
+                <h3 class="mt-3">Solution 1</h3>
 
                 <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
 
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">More pictures</button>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>More pictures</h6></button>
 
                 <div class="modal fade" id="myModal" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h4 class="modal-title">Solution 1</h4>
+                                <h4 class="modal-title text-dark">Solution 1</h4>
                             </div>
                             <div class="modal-body">
                                 <div id="demo" class="carousel slide" data-ride="carousel">
@@ -337,19 +340,19 @@
 
             <div class="col-md-6">
 
-                <h3 class="display-4 bold mt-3">Solution 2</h3>
+                <h3 class="mt-3">Solution 2</h3>
 
                 <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
 
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">More pictures</button>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>More pictures</h6></button>
 
                 <div class="modal fade" id="myModal" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h4 class="modal-title">Solution 2</h4>
+                                <h4 class="modal-title text-dark">Solution 2</h4>
                             </div>
                             <div class="modal-body">
                                 <div id="demo" class="carousel slide" data-ride="carousel">
@@ -386,24 +389,22 @@
             </div>
 
         </div>
-
-
-
-        <br /><br /><br /><br /><br />
 
     </div>
 
-    <br/><br/>
+    <br /><br />
 
     <div id="footer" class="bg-dark">
 
         <div class="text-center">
 
             <!-- Social buttons -->
-            <p class="display-4"><a href="https://d.facebook.com/ironratcustoms/"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://www.instagram.com/iron_rat_customs/"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:carlsabourin@gmail.com"><i class="fas fa-envelope"></i></a>
-            <a href="tel:+16138623030"><i class="fas fa-phone"></i></a></p>
+            <p class="display-4">
+                <a href="https://d.facebook.com/ironratcustoms/"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/iron_rat_customs/"><i class="fab fa-instagram"></i></a>
+                <a href="mailto:carlsabourin@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="tel:+16138623030"><i class="fas fa-phone"></i></a>
+            </p>
             <!-- Social buttons -->
 
         </div>
