--- a/mockups/ironRat/admin.html
+++ b/mockups/ironRat/admin.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-primary bg-dark">
         <a class="navbar-brand" href="index.html">
-            <p class="h1 mt-3 mb-3"><img src="images/logo1.png" width="30" height="30" alt="logo"> IRON RAT CUSTOMS</p>
+            <p class="h3 mt-1 mb-6"><img src="images/IronRatsLogo.svg" width="100" height="70" alt="logo"> I R C</p>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="btn btn-primary">MENU</span>
@@ -39,26 +39,29 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="index.html">Home </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="index.html">Home </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3 "><a href="products.html">Products</a></p>
+                    <p class="h6 mt-6 mb-3"><a href="reviews.html">Reviews </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="about-us.html">About us </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="products.html">Products</a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="contact-us.html">Contact us </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="about-us.html">About us </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="careers.html">Careers </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="contact-us.html">Contact us </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="appointment.html">Make an appointment </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="careers.html">Careers </a></p>
+                </li>
+                <li class="nav-item mr-4">
+                    <p class="h6 mt-6 mb-3"><a href="appointment.html">Make an appointment </a></p>
                 </li>
             </ul>
-            <p class="navbar-text mr-4 mt-3 mb-3 h2">
-                <a href="index.html">Log off</a>
+            <p class="navbar-text mr-4 mt-6 mb-3 h6">
+                <a href="log-in.html">Log in </a>
             </p>
         </div>
     </nav>
@@ -67,7 +70,7 @@
     <div class="container">
 
 
-        <h1 class="display-1 bold">Admin</h1>
+        <h1>Admin</h1>
 
         <hr />
 
@@ -76,49 +79,49 @@
             <div class="col-md-8">
 
                 <div class="panel panel-default">
-                    <div class="panel-heading"><h3 class="display-4 bold mt-3">Add products</h3></div>
+                    <div class="panel-heading"><h2>Add products</h2></div>
                     <div class="panel-body">
 
                         <div class="form-group mb-5">
-                            <h2>
+                            <p>
                                 <label class="text-dark" for="title">Title:</label>
-                            </h2>
+                            </p>
                             <input type="text" class="form-control" id="title">
                         </div>
                         <div class="form-group mb-5">
-                            <h2>
+                            <p>
                                 <label class="text-dark" for="description">Description:</label>
-                            </h2>
+                            </p>
                             <input type="text" class="form-control" id="deecription">
                         </div>
 
-                        <p class="mb-4"> <button type="button" class="btn btn-info bt-xs"><h3>add images</h3></button></p>
+                        <p class="mb-4"> <button type="button" class="btn btn-info bt-xs"><h6>add images</h6></button></p>
 
-                        <p><button type="button" class="btn btn-success"><h3>upload product</h3></button></p>
+                        <p><button type="button" class="btn btn-success"><h6>upload product</h6></button></p>
 
                     </div>
                 </div>
 
                 <div class="panel panel-default">
-                    <div class="panel-heading"><h3 class="display-4 bold mt-3">Add careers</h3></div>
+                    <div class="panel-heading"><h2>Add careers</h2></div>
                     <div class="panel-body">
 
                         <div class="form-group mb-5">
-                            <h2>
+                            <p>
                                 <label class="text-dark" for="title">Title:</label>
-                            </h2>
+                            </p>
                             <input type="text" class="form-control" id="title">
                         </div>
                         <div class="form-group mb-5">
-                            <h2>
+                            <p>
                                 <label class="text-dark" for="description">Description:</label>
-                            </h2>
+                            </p>
                             <input type="text" class="form-control" id="deecription">
                         </div>
 
-                        <p class="mb-4"> <button type="button" class="btn btn-info bt-xs"><h3>add images</h3></button></p>
+                        <p class="mb-4"> <button type="button" class="btn btn-info bt-xs"><h6>add images</h6></button></p>
 
-                        <p><button type="button" class="btn btn-success"><h3>upload career</h3></button></p>
+                        <p><button type="button" class="btn btn-success"><h6>upload career</h6></button></p>
 
                     </div>
                 </div>
@@ -128,51 +131,51 @@
             <div class="col-md-4">
 
                 <div class="panel panel-default">
-                    <div class="panel-heading"><h3 class="display-4 bold mt-3">Reset password</h3></div>
+                    <div class="panel-heading"><h2>Reset password</h2></div>
                     <div class="panel-body">
 
                         <div class="form-group mb-5">
-                            <h2>
+                            <p>
                                 <label class="text-dark" for="password">current password:</label>
-                            </h2>
+                            </p>
                             <input type="password" class="form-control" id="password">
                         </div>
                         <div class="form-group mb-5">
-                            <h2>
+                            <p>
                                 <label class="text-dark" for="password2">New password:</label>
-                            </h2>
+                            </p>
                             <input type="password" class="form-control" id="password2">
                         </div>
 
-                        <button type="button" class="btn btn-success"><h3>change password</h3></button>
+                        <button type="button" class="btn btn-success"><h6>change password</h6></button>
 
                     </div>
                 </div>
 
                 <div class="panel panel-default">
-                    <div class="panel-heading"><h3 class="display-4 bold mt-3">Color picker</h3></div>
+                    <div class="panel-heading"><h2>Color picker</h2></div>
                     <div class="panel-body">
 
                         <div class="form-group mb-5">
-                            <h2>
+                            <p>
                                 <label class="text-dark" for="color1">Background color:</label>
-                            </h2>
+                            </p>
                             <input type="text" class="form-control" id="color1">
                         </div>
                         <div class="form-group mb-5">
-                            <h2>
+                            <p>
                                 <label class="text-dark" for="color2">Text color:</label>
-                            </h2>
+                            </p>
                             <input type="text" class="form-control" id="color2">
                         </div>
                         <div class="form-group mb-5">
-                            <h2>
+                            <p>
                                 <label class="text-dark" for="color3">Button color:</label>
-                            </h2>
+                            </p>
                             <input type="text" class="form-control" id="color3">
                         </div>
 
-                        <button type="button" class="btn btn-success"><h3>change colors</h3></button>
+                        <button type="button" class="btn btn-success"><h6>change colors</h6></button>
 
                     </div>
                 </div>
@@ -181,7 +184,7 @@
 
         </div>
 
-        <h3 class="display-4 bold mt-3">Recent inquires</h3>
+        <h2>Recent inquires</h2>
 
         <table class="table table-striped">
             <thead>
@@ -222,17 +225,19 @@
 
     </div>
 
-    <br/><br/>
+    <br /><br />
 
     <div id="footer" class="bg-dark">
 
         <div class="text-center">
 
             <!-- Social buttons -->
-            <p class="display-4"><a href="https://d.facebook.com/ironratcustoms/"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://www.instagram.com/iron_rat_customs/"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:carlsabourin@gmail.com"><i class="fas fa-envelope"></i></a>
-            <a href="tel:+16138623030"><i class="fas fa-phone"></i></a></p>
+            <p class="display-4">
+                <a href="https://d.facebook.com/ironratcustoms/"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/iron_rat_customs/"><i class="fab fa-instagram"></i></a>
+                <a href="mailto:carlsabourin@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="tel:+16138623030"><i class="fas fa-phone"></i></a>
+            </p>
             <!-- Social buttons -->
 
         </div>
