--- a/mockups/ironRat/appointment.html
+++ b/mockups/ironRat/appointment.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-primary bg-dark">
         <a class="navbar-brand" href="index.html">
-            <p class="h1 mt-3 mb-3"><img src="images/logo1.png" width="30" height="30" alt="logo"> IRON RAT CUSTOMS</p>
+            <p class="h3 mt-1 mb-6"><img src="images/IronRatsLogo.svg" width="100" height="70" alt="logo"> I R C</p>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="btn btn-primary">MENU</span>
@@ -36,26 +36,29 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="index.html">Home </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="index.html">Home </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="products.html">Products</a></p>
+                    <p class="h6 mt-6 mb-3"><a href="reviews.html">Reviews </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="about-us.html">About us </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="products.html">Products</a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="contact-us.html">Contact us </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="about-us.html">About us </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="careers.html">Careers </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="contact-us.html">Contact us </a></p>
                 </li>
-                <li class="nav-item mr-4 active">
-                    <p class="h2 mt-3 mb-3"><a href="appointment.html">Make an appointment </a></p>
+                <li class="nav-item mr-4">
+                    <p class="h6 mt-6 mb-3"><a href="careers.html">Careers </a></p>
+                </li>
+                <li class="nav-item mr-4">
+                    <p class="h6 mt-6 mb-3"><a href="appointment.html">Make an appointment </a></p>
                 </li>
             </ul>
-            <p class="navbar-text mr-4 mt-3 mb-3 h2">
-                <a href="#">Log in </a>
+            <p class="navbar-text mr-4 mt-6 mb-3 h6">
+                <a href="log-in.html">Log in </a>
             </p>
         </div>
     </nav>
@@ -64,51 +67,53 @@
     <div class="container">
 
 
-        <h1 class="display-1 bold">Make an appointment</h1>
+        <h1>Make an appointment</h1>
 
         <hr />
 
         <div class="form-group mb-5">
-            <h2>
+            <p>
                 <label for="usr">Name:</label>
-            </h2>
-                <input type="text" class="form-control" id="name">
+            </p>
+            <input type="text" class="form-control" id="name">
         </div>
         <div class="form-group mb-5">
-            <h2>
+            <p>
                 <label for="pwd">Email:</label>
-            </h2>
-                <input type="email" class="form-control" id="email">
+            </p>
+            <input type="email" class="form-control" id="email">
         </div>
         <div class="form-group mb-5">
-            <h2>
+            <p>
                 <label for="date">Choose prefered date:</label>
-            </h2>
+            </p>
             <input type="email" class="form-control" id="date">
         </div>
         <div class="form-group mb-5">
-            <h2>
+            <p>
                 <label for="comment">What kind of work do you want done:</label>
-            </h2>
+            </p>
             <textarea class="form-control" rows="8" id="comment"></textarea>
         </div>
 
-        <button type="button" class="btn btn-primary"><h3>Send appointment request</h3></button>
-        
+        <button type="button" class="btn btn-primary"><h6>Send appointment request</h6></button>
+
 
     </div>
 
-    <br/><br/><br/><br/>
+    <br /><br /><br /><br />
 
     <div id="footer" class="bg-dark">
 
         <div class="text-center">
 
             <!-- Social buttons -->
-            <p class="display-4"><a href="https://d.facebook.com/ironratcustoms/"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://www.instagram.com/iron_rat_customs/"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:carlsabourin@gmail.com"><i class="fas fa-envelope"></i></a>
-            <a href="tel:+16138623030"><i class="fas fa-phone"></i></a></p>
+            <p class="display-4">
+                <a href="https://d.facebook.com/ironratcustoms/"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/iron_rat_customs/"><i class="fab fa-instagram"></i></a>
+                <a href="mailto:carlsabourin@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="tel:+16138623030"><i class="fas fa-phone"></i></a>
+            </p>
             <!-- Social buttons -->
 
         </div>
