--- a/mockups/ironRat/careers.html
+++ b/mockups/ironRat/careers.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-primary bg-dark">
         <a class="navbar-brand" href="index.html">
-            <p class="h1 mt-3 mb-3"><img src="images/logo1.png" width="30" height="30" alt="logo"> IRON RAT CUSTOMS</p>
+            <p class="h3 mt-1 mb-6"><img src="images/IronRatsLogo.svg" width="100" height="70" alt="logo"> I R C</p>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="btn btn-primary">MENU</span>
@@ -39,25 +39,28 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="index.html">Home </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="index.html">Home </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="products.html">Products</a></p>
-                </li>
-                <li class="nav-item mr-4 active">
-                    <p class="h2 mt-3 mb-3"><a href="about-us.html">About us </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="reviews.html">Reviews </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="contact-us.html">Contact us </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="products.html">Products</a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="careers.html">Careers </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="about-us.html">About us </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="appointment.html">Make an appointment </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="contact-us.html">Contact us </a></p>
+                </li>
+                <li class="nav-item mr-4">
+                    <p class="h6 mt-6 mb-3"><a href="careers.html">Careers </a></p>
+                </li>
+                <li class="nav-item mr-4">
+                    <p class="h6 mt-6 mb-3"><a href="appointment.html">Make an appointment </a></p>
                 </li>
             </ul>
-            <p class="navbar-text mr-4 mt-3 mb-3 h2">
+            <p class="navbar-text mr-4 mt-6 mb-3 h6">
                 <a href="log-in.html">Log in </a>
             </p>
         </div>
@@ -67,7 +70,7 @@
     <div class="container">
 
 
-        <h1 class="display-1 bold">Careers</h1>
+        <h1>Careers</h1>
 
         <hr />
 
@@ -96,7 +99,7 @@
 
         </div>
 
-        <h2 class="display-3 bold">Why we are a great workplace!</h2>
+        <h2>Why we are a great workplace!</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis eros vel varius luctus. Nunc viverra vestibulum erat a consectetur. Suspendisse in aliquam arcu. Quisque et enim mauris. Suspendisse egestas, lacus eu rutrum scelerisque, quam metus aliquet felis, ut semper lacus justo ac erat. Nunc in tincidunt odio. Duis nec dictum arcu. In ultricies purus ut risus suscipit imperdiet. Suspendisse tellus risus, tincidunt eget venenatis eget, auctor ut sapien. Suspendisse in lacus lacus. Vivamus faucibus faucibus sapien, sit amet laoreet tortor pharetra eu. Aenean et eros tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sodales venenatis tellus a aliquam. Sed erat lorem, condimentum vitae bibendum nec, dapibus a odio. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 
@@ -108,47 +111,47 @@
 
         <p>Curabitur et mi nibh. Curabitur non semper magna, ut tincidunt leo. Vestibulum fermentum libero nec nisi porttitor, in tristique nunc maximus. Praesent non eros justo. Etiam iaculis tellus vel justo dictum maximus. Curabitur bibendum ultrices vulputate. Duis lobortis leo non eros consectetur molestie. Praesent non mi ligula. Donec accumsan justo in enim suscipit volutpat.</p>
 
-        <h2 class="display-1 bold">Opportunities available</h2>
+        <h2>Opportunities available</h2>
 
         <div class="row">
 
             <div class="col-md-6">
 
-                <h3 class="display-4 bold mt-3">Job 1</h3>
+                <h3 class="mt-3">Job 1</h3>
 
                 <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
 
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Apply</button>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>Apply</h6></button>
 
                 <div class="modal fade" id="myModal" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h4 class="modal-title">Job 1</h4>
+                                <h4 class="modal-title text-dark">Job 1</h4>
                             </div>
                             <div class="modal-body">
                                 <div class="form-group mb-5">
-                                    <h2>
+                                    <p>
                                         <label class="text-dark" for="name">Name:</label>
-                                    </h2>
+                                    </p>
                                     <input type="text" class="form-control" id="name">
                                 </div>
                                 <div class="form-group mb-5">
-                                    <h2>
+                                    <p>
                                         <label class="text-dark" for="email">Email:</label>
-                                    </h2>
+                                    </p>
                                     <input type="password" class="form-control" id="email">
                                 </div>
                                 <div class="form-group mb-5">
-                                    <h2>
+                                    <p>
                                         <label class="text-dark" for="comment">Resume:</label>
-                                    </h2>
+                                    </p>
                                     <textarea class="form-control" rows="8" id="resume"></textarea>
                                 </div>
 
-                                <button type="button" class="btn btn-primary"><h3>submit application</h3></button>
+                                <button type="button" class="btn btn-primary"><h6>submit application</h6></button>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
@@ -160,41 +163,41 @@
 
             <div class="col-md-6">
 
-                <h3 class="display-4 bold mt-3">Job 2</h3>
+                <h3 class="mt-3">Job 2</h3>
 
                 <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
 
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Apply</button>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>Apply</h6></button>
 
                 <div class="modal fade" id="myModal" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h4 class="modal-title">Job 2</h4>
+                                <h4 class="modal-title text-dark">Job 2</h4>
                             </div>
                             <div class="modal-body">
                                 <div class="form-group mb-5">
-                                    <h2>
+                                    <p>
                                         <label class="text-dark" for="name">Name:</label>
-                                    </h2>
+                                    </p>
                                     <input type="text" class="form-control" id="name">
                                 </div>
                                 <div class="form-group mb-5">
-                                    <h2>
+                                    <p>
                                         <label class="text-dark" for="email">Email:</label>
-                                    </h2>
+                                    </p>
                                     <input type="password" class="form-control" id="email">
                                 </div>
                                 <div class="form-group mb-5">
-                                    <h2>
+                                    <p>
                                         <label class="text-dark" for="comment">Resume:</label>
-                                    </h2>
+                                    </p>
                                     <textarea class="form-control" rows="8" id="resume"></textarea>
                                 </div>
 
-                                <button type="button" class="btn btn-primary"><h3>submit application</h3></button>
+                                <button type="button" class="btn btn-primary"><h6>submit application</h6></button>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
@@ -232,8 +235,8 @@
 
     </div>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
 </body>
 
 </html>
