--- a/mockups/ironRat/contact-us.html
+++ b/mockups/ironRat/contact-us.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-primary bg-dark">
         <a class="navbar-brand" href="index.html">
-            <p class="h1 mt-3 mb-3"><img src="images/logo1.png" width="30" height="30" alt="logo"> IRON RAT CUSTOMS</p>
+            <p class="h3 mt-1 mb-6"><img src="images/IronRatsLogo.svg" width="100" height="70" alt="logo"> I R C</p>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="btn btn-primary">MENU</span>
@@ -36,25 +36,28 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="index.html">Home </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="index.html">Home </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="products.html">Products</a></p>
+                    <p class="h6 mt-6 mb-3"><a href="reviews.html">Reviews </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="about-us.html">About us </a></p>
-                </li>
-                <li class="nav-item mr-4 active">
-                    <p class="h2 mt-3 mb-3"><a href="contact-us.html">Contact us </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="products.html">Products</a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="careers.html">Careers </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="about-us.html">About us </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="appointment.html">Make an appointment </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="contact-us.html">Contact us </a></p>
+                </li>
+                <li class="nav-item mr-4">
+                    <p class="h6 mt-6 mb-3"><a href="careers.html">Careers </a></p>
+                </li>
+                <li class="nav-item mr-4">
+                    <p class="h6 mt-6 mb-3"><a href="appointment.html">Make an appointment </a></p>
                 </li>
             </ul>
-            <p class="navbar-text mr-4 mt-3 mb-3 h2">
+            <p class="navbar-text mr-4 mt-6 mb-3 h6">
                 <a href="log-in.html">Log in </a>
             </p>
         </div>
@@ -64,7 +67,7 @@
     <div class="container">
 
 
-        <h1 class="display-1 bold">Contact us</h1>
+        <h1>Contact us</h1>
 
         <hr />
 
@@ -74,15 +77,15 @@
 
                 <h2>We are located at:</h2>
 
-                <p class="lead">1385 Woodroffe Ave, Nepean, ON K2G 1V8</p>
+                <p>1385 Woodroffe Ave, Nepean, ON K2G 1V8</p>
 
                 <h2>Call us at at:</h2>
 
-                <p class="lead"><a href="tel:+16138623030">1 (613) 862-3030</a></p>
+                <p><a href="tel:+16138623030">1 (613) 862-3030</a></p>
 
                 <h2>Call us at at:</h2>
 
-                <p class="lead"><a href="mailto:carlsabourin@gmail.com">carlsabourin@gmail.com</a></p>
+                <p><a href="mailto:carlsabourin@gmail.com">carlsabourin@gmail.com</a></p>
 
 
             </div>
@@ -95,33 +98,33 @@
 
         </div>
 
-        <h2 class="display-4 bold">Message us:</h2>
+        <h2>Message us:</h2>
 
-        <p class="lead">Feel free to lea ve a comment, feedback or inquires here!</p>
+        <p>Feel free to leave a comment, feedback or inquires here!</p>
 
         <div class="form-group mb-5">
-            <h2>
+            <p>
                 <label for="name">Name:</label>
-            </h2>
+            </p>
             <input type="text" class="form-control" id="name">
         </div>
         <div class="form-group mb-5">
-            <h2>
+            <p>
                 <label for="email">Email:</label>
-            </h2>
+            </p>
             <input type="password" class="form-control" id="email">
         </div>
         <div class="form-group mb-5">
-            <h2>
+            <p>
                 <label for="comment">comment:</label>
-            </h2>
+            </p>
             <textarea class="form-control" rows="8" id="comment"></textarea>
         </div>
 
-        <button type="button" class="btn btn-primary"><h3>submit comment</h3></button>
+        <button type="button" class="btn btn-primary"><h6>submit comment</h6></button>
 
 
-        <br /><br /><br/><br/>
+        <br /><br /><br /><br />
 
         <div id="footer" class="bg-dark">
 
@@ -147,8 +150,8 @@
 
     </div>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
 </body>
 
 </html>
