--- a/mockups/ironRat/index.html
+++ b/mockups/ironRat/index.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-primary bg-dark">
         <a class="navbar-brand" href="index.html">
-            <p class="h1 mt-3 mb-3"><img src="images/logo1.png" width="30" height="30" alt="logo"> IRON RAT CUSTOMS</p>
+            <p class="h3 mt-1 mb-6"><img src="images/IronRatsLogo.svg" width="100" height="70" alt="logo"> I R C</p>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="btn btn-primary">MENU</span>
@@ -35,26 +35,29 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item mr-4 active">
-                    <p class="h2 mt-3 mb-3"><a href="index.html">Home </a></p>
+                <li class="nav-item mr-4">
+                    <p class="h6 mt-6 mb-3"><a href="index.html">Home </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="products.html">Products</a></p>
+                    <p class="h6 mt-6 mb-3"><a href="reviews.html">Reviews </a></p> 
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="about-us.html">About us </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="products.html">Products</a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="contact-us.html">Contact us </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="about-us.html">About us </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="careers.html">Careers </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="contact-us.html">Contact us </a></p>
                 </li>
                 <li class="nav-item mr-4">
-                    <p class="h2 mt-3 mb-3"><a href="appointment.html">Make an appointment </a></p>
+                    <p class="h6 mt-6 mb-3"><a href="careers.html">Careers </a></p>
+                </li>
+                <li class="nav-item mr-4">
+                    <p class="h6 mt-6 mb-3"><a href="appointment.html">Make an appointment </a></p>
                 </li>
             </ul>
-            <p class="navbar-text mr-4 mt-3 mb-3 h2">
+            <p class="navbar-text mr-4 mt-6 mb-3 h6">
                 <a href="log-in.html">Log in </a>
             </p>
         </div>
@@ -64,7 +67,7 @@
     <div class="container">
 
 
-        <h1 class="display-1 bold">Iron Rat Customs</h1>
+        <h1>Iron Rat Customs</h1>
 
         <hr />
 
@@ -97,39 +100,39 @@
 
             <div class="col-md-8">
 
-                <h2 class="display-3 bold">What is powder coating?</h2>
+                <h2>What is powder coating?</h2>
 
-                <p class="lead mt-3">
+                <p class="mt-3">
                     Powder coating is a type of coating that is applied as a free-flowing, dry powder. The main
                     difference between a conventional liquid paint and a powder coating is that the powder coating does
                     not require a solvent to keep the binder and filler parts in a liquid suspension form.
                 </p>
 
-                <button type="button" class="btn btn-primary btn-block btn-lg mb-3 mt-3 visible-sm visible-xs"><h3 class="display-5 bold">Make an appointment today!</h3></button>
-                
+                <button type="button" class="btn btn-primary btn-block btn-lg mb-3 mt-3 visible-sm visible-xs"><p class="h6">Make an appointment today!</p> </button>
+
                 <div class="row">
 
                     <div class="col-md-6">
 
                         <a href="products.html">
-                            <h3 class="display-4 bold">Products</h3>
+                            <h3>Products</h3>
 
                             <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
                         </a>
 
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
                     </div>
 
                     <div class="col-md-6">
 
                         <a href="contact-us.html">
-                            <h3 class="display-4 bold">Contact us</h3>
+                            <h3>Contact us</h3>
 
                             <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
                         </a>
 
-                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
                     </div>
 
@@ -140,36 +143,52 @@
                     <div class="col-md-6">
 
                         <a href="about-us.html">
-                            <h3 class="display-4 bold">About us</h3>
+                            <h3>About us</h3>
 
                             <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
                         </a>
 
-                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
                     </div>
 
                     <div class="col-md-6">
 
                         <a href="careers.html">
-                            <h3 class="display-4 bold">Careers</h3>
+                            <h3>Careers</h3>
 
                             <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
                         </a>
 
-                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
 
                     </div>
 
+                </div>
+
+                <div class="visible-sm visible-xs">
+                    <a href="reviews.html">
+                        <h3>Reviews</h3>
+
+                        <p><img src="images/stars.png" alt="icon" class="img-fluid" /></p>
+                    </a>
                 </div>
 
             </div>
 
             <div class="col-md-4 mt-4">
 
-                <button type="button" class="btn btn-primary btn-block btn-lg mb-3 hidden-sm hidden-xs"><h3 class="display-5 bold">Make an appointment today!</h3></button>
+                <button type="button" class="btn btn-primary btn-block btn-lg mb-3 hidden-sm hidden-xs"><p class="h6">Make an appointment today!</p></button>
 
                 <p class="text-center"><iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fironratcustoms%2F&tabs=timeline&width=340&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></p>
+
+                <div class="hidden-sm hidden-xs">
+                    <a href="reviews.html">
+                        <h3>Reviews</h3>
+
+                        <p><img src="images/stars.png" alt="icon" class="img-fluid" /></p>
+                    </a>
+                </div>
 
             </div>
 
