1.integrate inde.html to home component; 2. modify webpack.config.js to add support for image loader; 3. Modify React Router; 4. create socketMiddleWare.js to integrate socket.io to Redux as a middleware; 5 Move img folder to scr folder and rename the folder to images; 6. Modify main.css to fix footer incorrect style; 7. create navBar and footer component

--- a/template.html
+++ b/template.html
@@ -41,7 +41,7 @@
     ></script>
     <title>Iron Rat Customs - Home</title>
   </head>
-  <body>
+  <body id="page-top" class="bg-dark">
     <div id="app"></div>
   </body>
 </html>
