Change the company name to Iron Rat Customs

--- a/template.html
+++ b/template.html
@@ -39,7 +39,7 @@
       integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP"
       crossorigin="anonymous"
     ></script>
-    <title>Iron Rat Custom - Home</title>
+    <title>Iron Rat Customs - Home</title>
   </head>
   <body id="page-top" class="bg-dark">
     <div id="app"></div>
