--- a/template.html
+++ b/template.html
@@ -33,7 +33,7 @@
     />
     <title>Iron Rat Customs - Home</title>
   </head>
-  <body id="page-top" class="bg-dark">
+  <body id="page-top">
     <div id="app"></div>
 
     <!-- Latest compiled and minified JavaScript -->
